--- a/ibmlogin.html
+++ b/ibmlogin.html
@@ -24,7 +24,7 @@
         background: rgba(16, 15, 15, 0.338);
         backdrop-filter: blur(10px);
         width: 30%;
-        min-width:250px;
+        min-width:285px;
         padding: 35px 50px;
         transform: translate(-50%,-50%);
         position: absolute;
@@ -100,7 +100,7 @@
   <body>
     <div class="container">
         <h1>GET IN TOUCH</h1>
-        <form action="./ibmdash.html">
+        <form action="login.php" >
             <div class="row">
                 <div class="column">
                     <label for="contact">Contact</label>
